<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SPL Meter</string>
    <string name="result_value">Equivalent</string>
    <string name="current_value">SPL</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="dBCaption">dBA</string>
    <string name="standard">Classification</string>
    <string name="fs_analysis">Freq analysis</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="on">Start</string>
    <string name="option">Settings</string>
    <string name="result">Results</string>
    <string name="modeCaption">Mode:</string>
    <string name="calibrate">Calibrated value:</string>
    <string name="share_label1">Save Results</string>
    <string name="share_label2">save and analyze measure results</string>
    <string name="help">Help and instructions</string>
    <string name="check_update">Check for update</string>
    <string name="about">About</string>
    <string name="language">Language:</string>
    <string name="evaluate">Evaluate</string>
    <string name="last">Back</string>
    <string name="next">Next</string>
    <string name="sound">What do you hear</string>
    <string name="mul_choice">(Multiple Choices)</string>
    <string name="assessment">Please evaluate your hearing sound</string>
    <string name="drag_to_ass">（Please select item to evaluate）</string>
    <string name="person_info">Briefly describe yourself</string>
    <string name="age">Age Group：</string>
    <string name="done">Confirm</string>
    <string name="gender">Gender：</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="share_title">Who do you want to share with</string>
    <string name="share_scientist">Scientist</string>
    <string name="share_sina">Sina microblog</string>
    <string name="share_tx_weibo">Tencent microblog</string>
    <string name="share_wechat">WeChat</string>
    <string name="share_twitter">Twitter</string>
    <string name="share_facebook">Facebook</string>
    <string name="go_back">Go back</string>
    <string name="version_name">Version：v-</string>
    <string name="can_not_find_version_name">v</string>
    <string name="newest">The current version is the latest</string>
    <string name="no_wifi">No wifi connection, wifi is required</string>
    <string name="timeout">Time out</string>
    <string name="basic_frequency">Main Freq</string>
    <string name="hz">Hz</string>
    <string name="infoTitle">Tips</string>
    <string name="share_success">Successful!\n
The shared results will help us to study more thoroughly on the urban sound environment. Your privacy is safe. You can find what you shared in help and instruction in the Settings page.</string>
    <string name="Community_contribution">Community contribution</string>
    <string name="share_detail1">I am involving participatory soundscape sensing program. Current noise level is </string>
    <string name="share_detail2">The tool can be downloaded from </string>
    <string name="already_copy">Saved to the clipboard, open your social applications to share with friends</string>
    <string name="shareing">Results are saving. . .</string>
    <string name="share_fail">Failed! Make sure Internet connected or try again later.</string>
    <string name="sound_level">Sound level:</string>
    <string name="acoustic_comfort_level">Acoustic comfort level:</string>
    <string name="coordinated_level">Harmonious level(sound&amp;environment):</string>
    <string name="network_fail">Network failure, please check the network connection</string>
    <string name="giveup">Give up</string>
    <string name="where">Whrer are you now</string>
    <string name="clear">Clear</string>
    <string name="queitRate">qualified rate of Quiet </string>
    <string name="unknown">unknown</string>
    <string name="place">Place：</string>
    <string name="soundesource">Source：</string>
    <string name="sound_level2">Sound level:</string>

    <array name="sound_levelGroup">
        <item>Please select</item>
        <item>very low</item>
        <item>low</item>
        <item>moderate</item>
        <item>high</item>
        <item>very high</item>
    </array>
    <array name="acoustic_comfort_levelGroup">
        <item>Please select</item>
        <item>very uncomfortable</item>
        <item>uncomfortable</item>
        <item>moderate</item>
        <item>comfortable</item>
        <item>very comfortable</item>
    </array>
    <array name="coordinated_levelGroup">
        <item>Please select</item>
        <item>very unharmonious</item>
        <item>unharmonious</item>
        <item>moderate</item>
        <item>harmonious</item>
        <item>very harmonious</item>
    </array>
    <array name="levelGroup">
        <item>Very quiet</item>
        <item>Quiet</item>
        <item>Moderate</item>
        <item>Noisy	</item>
        <item>Very noisy</item>
    </array>
    <array name="ageGroup">
        <item>Please select</item>
        <item>younger than 12</item>
        <item>12-18</item>
        <item>19-30</item>
        <item>31-40</item>
        <item>41-50</item>
        <item>51-60</item>
        <item>older than 60</item>
    </array>
    <array name="modeGroup">
        <item>Out door</item>
        <item>In door</item>
    </array>

</resources>