<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/system_gray"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="@string/share_title"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="60dp" >

        <TextView
            android:id="@+id/share_scientist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:drawableLeft="@drawable/icon_scientist"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/share_scientist"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/share_sina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/share_scientist"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/icon_sina"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/share_sina"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/share_tx_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/share_sina"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/icon_tx_weibo"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/share_tx_weibo"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/share_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/share_tx_weibo"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/icon_wechat"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/share_wechat"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/share_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/share_wechat"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/icon_twitter"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/share_twitter"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/share_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/share_twitter"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/icon_facebook"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/share_facebook"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>