<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:padding="7dp"
    tools:context="com.splmeter.ui.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:background="@drawable/shape_main_block"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modeCaption"
            android:textColor="@color/white"
            android:textSize="16sp" >
        </TextView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/modeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:drawSelectorOnTop="true"
                android:padding="3dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_gravity="right|center_vertical"
                android:paddingTop="5dp"
                android:src="@drawable/arrow_down" />
        </FrameLayout>

        <TextView
            android:id="@+id/clbCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/calibrate"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/clbTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:digits="1234567890-."
            android:hint="0"
            android:lines="1"
            android:padding="3dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:layout_marginTop="15dp"
            android:background="@color/system_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/label1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/share_label1"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/label2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label1"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@+id/share_checkbox"
                android:text="@string/share_label2"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <CheckBox
                android:id="@+id/share_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:button="@drawable/checkbox"
                android:checked="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:background="@color/system_gray" />

        <LinearLayout
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_setting_bg"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:background="@color/system_gray" />

        <RelativeLayout
            android:id="@+id/check_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_setting_bg"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/check_update"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:background="@color/system_gray" />

        <LinearLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_setting_bg"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:background="@color/system_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/sel_btn"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:background="@drawable/sel_btn"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>