<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/system_gray"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="@string/sound"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/mul_choice"
            android:textSize="14sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/label"
            android:layout_marginTop="5dp"
            android:fillViewport="true" >

            <LinearLayout
                android:id="@+id/datalist"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <ListView
                    android:id="@+id/listView1"
                    android:layout_width="0dp"
                    android:layout_height="600dp"
                    android:layout_weight="1"
                    android:choiceMode="multipleChoice"
                    android:divider="@color/transparent"
                    android:dividerHeight="0dp"
                    android:listSelector="@color/transparent"
                    android:scrollbars="none" >
                </ListView>

                <ListView
                    android:id="@+id/listView2"
                    android:layout_width="0dp"
                    android:layout_height="600dp"
                    android:layout_weight="1"
                    android:choiceMode="multipleChoice"
                    android:divider="@color/transparent"
                    android:dividerHeight="0dp"
                    android:listSelector="@color/transparent"
                    android:scrollbars="none" >
                </ListView>

                <ListView
                    android:id="@+id/listView3"
                    android:layout_width="0dp"
                    android:layout_height="600dp"
                    android:layout_weight="1"
                    android:choiceMode="multipleChoice"
                    android:divider="@color/transparent"
                    android:dividerHeight="0dp"
                    android:listSelector="@color/transparent"
                    android:scrollbars="none" >
                </ListView>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/last_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/sel_btn"
            android:text="@string/last"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:background="@drawable/sel_btn"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>